working on the shrine's hidden hole guide

--- a/html/dungeon/hidden_hole.html
+++ b/html/dungeon/hidden_hole.html
@@ -23,9 +23,9 @@
               <p>
                 Dungeon you can enter after clearing Onigashima.
               </p>
-              <p>
-                Text
-              </p>
+              <p>The idea is to capture monsters using an item called Monster Pot,<br>and progress through the dungeon by utilizing ally monster abilities.</p>
+              <p>You can bring up to 10 Monster Pots (empty or monster inside) into the dungeon,<br>and you'll also be given 3 empty Monster Pots and an Escape Scroll when you enter.</p>
+              <p>Once you have some useful monsters like Mixer, Iai, and Armordillo Pop,<br>this dungeon becomes the easiest one among the post-game dungeons,<br>since you'll be able to synthesize a Leather Shield+99 (弟弟弟弟薬) with ease.</p>
               <p class="dungeon_desc_warning">※ ※ ※ Warning ※ ※ ※</p>
               <p>
                 This dungeon loops endlessly after going down the stairs on 99F,<br>
@@ -121,12 +121,288 @@
             </div>
           </div>
           <h2 id="dungeon_overview">Dungeon Overview</h2>
-          <p>Text</p>
+          <p>
+            Equipment cannot be found naturally on the ground, so you'll have to use<br>Kengo family monsters to obtain Clubs or Leather Shields if you want equipment.<br>If you're lucky, you might obtain monster drops like Fish Spear, Ironhead's Head, and Minotaur's Axe.
+          </p>
+          <p>
+            Mixer monsters do not spawn in this dungeon, and Synthesis Pots cannot be found.<br>You'll have to capture a Mixer from a different dungeon and bring it with you if you want to synthesize.<br>Side note: Shrine's Hidden Hole (B) doesn't allow carry-in items, so the Leather Shield+99 strategy cannot be used.
+          </p>
+          <p>
+            This is the only dungeon where Queen Spider can be found.<br>If you wish to complete Monster Kingdom, you'll have to descend to 60F of this dungeon to capture one.<br>That said, she is the strongest ally monster in the game when you max her growth, so it's worth the effort.
+          </p>
+          <p>
+            Special Monster Houses can spawn on all floors,<br>so you might be placed in an unwinnable situation from the very first floor if you're unlucky.<br>However, that also means you have a chance to capture high level monsters from the first floor too.<br>Don't give up if you happen to have one bad experience with a Special Monster House.
+          </p>
           <h2 id="important_items">Basic Strategy</h2>
+          <p>
+            The most consistent strategy is to synthesize a Leather Shield+99 (弟弟弟弟薬) using Kengo and Mixer.<br>
+            Armordillo Pop will make obtaining Otogiriso easier, and you'll also want to bring Nigiri Boss or Manager<br>along to make sure you have enough food, as it's a very time-consuming process.
+          </p>
+          <p>
+            Of course, you don't have to use this strategy, but since this is a wiki aimed at helping players of<br>any skill level clear these dungeons, the floor guide will assume the Leather Shield strategy is being used.
+          </p>
+          <p>
+            One other thing to keep in mind, you can level Shiren up by defeating monsters even if you don't have a weapon.<br>Weaken enemy monsters with abilities like Slug licks or Emperor Tusker's Quarter Staff, and have Shiren finish them off.
+          </p>
           <h3 id="weapon">Monster Pot + Ally Monster Mechanics</h3>
-          <p></p>
+          <p>Monster Pots are the key items of this dungeon, so their mechanics will be detailed in this section, along with ally monsters.</p>
+          <p>
+            Monster Pots are <b>guaranteed to hit the target</b> when thrown at a monster.<br>Therefore, they can be used not only to capture monsters, but also as a way to<br>completely nullify a monster if you're cornered and need a way to escape the situation.
+          </p>
+          <p>
+            Ally monsters will grow stronger when they defeat enemy monsters, increasing their HP and attack by a small amount.<br>Note that Shiren doesn't gain any experience when ally monsters defeat monsters.<br>Ally monsters don't gain experience either, but will instead always grow by 1 stage for every monster they defeat.<br>So you could even max their stats on 1F by defeating Mamels and Chintalas until you reach the growth limit.<br>You'll want to hit the growth limit beforehand on monsters with high potential like Monsoon Dolls when attempting a deep run.
+          </p>
+          <p>
+            Monsters will always use their special attack <b>on the same turn</b> they are sent outside of their pot. (With some exceptions)<br>Therefore, you can reliably use abilities like Armordillo's tackle or Aqua Dragon's freezing breath on approaching monsters.
+          </p>
+          <p>
+            Select the [Call] menu option to have monsters move toward Shiren and return to their pots.<br>Status conditions will be cured, and monsters will regenerate HP while they're inside their pot.<br>If Shiren doesn't have an ally monster's pot on hand, they will just continue to wander around in search of enemy monsters.
+          </p>
+          <p>
+            For the most part, you'll want to keep ally monsters inside their pots to keep their HP topped up when you<br>don't immediately need their abilities or help, since they don't regenerate HP when they're outside of their pots.<br>You also risk losing them if Shiren happens to step on a Pitfall or Landmine while they're outside of their pots.<br>It may be good to keep multiple pots of the important monsters as backup in case you lose one.
+          </p>
+          <p>
+            It's easy to forget, but it's possible to <b>throw an ally monster's pot at them</b> to have them return to their pot from a distance.<br>It's good to keep that in mind for situations where they're about to be defeated, or have been confused by a Gazer or reflected magic.<br>Just be sure to check for traps on the way to pick up the ally monster's pot.
+          </p>
+          <p>
+            Ally monsters registered with Monster Kingdom will return to Monster Kingdom<br>in the event they're defeated, or if Shiren collapses in a dungeon and loses his items.<br>Their growth will be halved when that happens, but it shouldn't take long to raise them again.<br>However, monsters that are not registered will be permanently lost, with one exception:<br>If a monster was outside of their pot when Shiren collapsed, there's a chance that they'll still be<br>around when you return to that location, so you can throw a new monster pot to capture them.<br>Talk to Oracle Gran to find out if there are any former ally monsters wandering around inside dungeons.
+          </p>
           <h3 id="weapon">Important Monsters</h3>
-          <p></p>
+          <p>Recommended monsters are highlighted in pink.<br>If you're unsure of what monsters to bring, you can't go wrong with these 10.<br>HP and ATK values are those at the growth limit.</p>
+          <table>
+            <tr>
+              <th>Name</th>
+              <th>Lv</th>
+              <th>HP</th>
+              <th>ATK</th>
+              <th>DEF</th>
+              <th>Notes</th>
+            </tr>
+            <tr>
+              <td class="recommended_monster">Archdragon</td>
+              <td>20</td>
+              <td class="stat_highlight_1">150</td>
+              <td>95</td>
+              <td>55</td>
+              <td class="recommended_monster_notes">Only breathes fire at targets in the same room as an ally.<br>Using a Posession Staff will let you breathe fire at any enemy on the current floor,<br>so it can be used to wipe out all monsters at the start and make it safer to explore.</td>
+            </tr>
+            <tr>
+              <td class="recommended_monster">Nigiri Manager</td>
+              <td>10</td>
+              <td>90</td>
+              <td>85</td>
+              <td>40</td>
+              <td class="recommended_monster_notes">Enemies defeated by Nigiri Manager will always drop a Large Riceball.<br>Use this ability to increase your max fullness to 200% early on.<br>Doesn't have high stats, so you'll want to avoid having it fight stronger monsters.</td>
+            </tr>
+            <tr>
+              <td class="recommended_monster">Hyper Gazer</td>
+              <td>15</td>
+              <td>115</td>
+              <td>93</td>
+              <td>55</td>
+              <td class="recommended_monster_notes">Confuses a target, making them unable to use their special ability or aim their attacks.<br>Can be a better option to use than Monsoon Doll, depending on the situation.</td>
+            </tr>
+            <tr>
+              <td>Porkton</td>
+              <td>20</td>
+              <td>140</td>
+              <td>100</td>
+              <td>63</td>
+              <td class="recommended_monster_notes">Tosses stones at targets within 10 tiles. Stones can hit enemies inside water.<br>Stones will arc, so you don't need to worry about the stones hitting Shiren.<br>Doesn't always use its special attack, so can be a little unreliable.</td>
+            </tr>
+            <tr>
+              <td>Kengo</td>
+              <td>15</td>
+              <td>57</td>
+              <td>64</td>
+              <td>19</td>
+              <td class="recommended_monster_notes">Flings Leather Shields from enemies.<br>Look for shields with upgrade values in order to synthesize a Leather Shield+99.<br>Low HP and defense, so be careful that it doesn't get defeated.</td>
+            </tr>
+            <tr>
+              <td class="recommended_monster">Iai</td>
+              <td>15</td>
+              <td>95</td>
+              <td>114</td>
+              <td>48</td>
+              <td class="recommended_monster_notes">Bring Iai instead of Kengo if you want to strengthen a Club along with a Leather Shield.<br>Avoid Shihan, since it can slow synthesis by flinging No Control Bracelets.</td>
+            </tr>
+            <tr>
+              <td>Intolerable Slug</td>
+              <td>40</td>
+              <td>145</td>
+              <td>83</td>
+              <td>40</td>
+              <td class="recommended_monster_notes">Sharply lowers an opponent's attack with its licking special attack.<br>It will never divide when it receives damage as an ally.</td>
+            </tr>
+            <tr>
+              <td class="recommended_monster">Tiny Phoenix</td>
+              <td>10</td>
+              <td>95</td>
+              <td>33</td>
+              <td>29</td>
+              <td class="recommended_monster_notes">Occasionally restores 50 HP to Shiren or another ally monster.<br>Tiny Phoenix has low stats, so don't leave it out too long.<br>Particularly useful if you encounter an Archdragon.</td>
+            </tr>
+            <tr>
+              <td>Lashaaga</td>
+              <td>5</td>
+              <td>103</td>
+              <td>73</td>
+              <td>63</td>
+              <td class="recommended_monster_notes">Can attack 3 times per turn. Slightly higher attack than Typhoon.<br>Wins most encounters as long as it's a 1-on-1 fight.</td>
+            </tr>
+            <tr>
+              <td>Bellthoven</td>
+              <td>10</td>
+              <td>100</td>
+              <td>65</td>
+              <td>40</td>
+              <td class="recommended_monster_notes">Summons 3 ally monsters from your inventory in a single turn.<br>It always selects the first three monsters from the top in your inventory.</td>
+            </tr>
+            <tr>
+              <td class="recommended_monster">Armordillo Pop</td>
+              <td>10</td>
+              <td>95</td>
+              <td>87</td>
+              <td>37</td>
+              <td class="recommended_monster_notes">Can make an opponent drop an item 100% of the time with its special attack.<br>Also useful for knocking back a monster to gain some distance.<br>It has low stats, so keep it safe inside of its pot unless you need its ability.</td>
+            </tr>
+            <tr>
+              <td class="recommended_monster">Monsoon Doll</td>
+              <td>50</td>
+              <td class="stat_highlight_2">185</td>
+              <td class="stat_highlight_2">145</td>
+              <td>50</td>
+              <td class="recommended_monster_notes">Can seal enemies, making them unable to use their special attacks.<br>Has a high growth limit, and is among the highest stats in the game when maxed.</td>
+            </tr>
+            <tr>
+              <td>Kamikaze</td>
+              <td>5</td>
+              <td>100</td>
+              <td>43</td>
+              <td>55</td>
+              <td class="recommended_monster_notes">Moves at triple speed, and attacks 3 times per turn.<br>Use Kamikaze if you don't care for Typhoon's ability to go through walls.</td>
+            </tr>
+            <tr>
+              <td class="recommended_monster">Typhoon</td>
+              <td>5</td>
+              <td>133</td>
+              <td>68</td>
+              <td class="stat_highlight_1">66</td>
+              <td class="recommended_monster_notes">Moves at triple speed, and attacks 3 times per turn. Can also go through walls.<br>Be sure to call it back so that it doesn't wander too far away.<br>Excellent to use as a counter to other Typhoons.</td>
+            </tr>
+            <tr>
+              <td>King Tusker</td>
+              <td>15</td>
+              <td>85</td>
+              <td>65</td>
+              <td>19</td>
+              <td class="recommended_monster_notes">Can seal monsters from a distance, making them unable to use their special attacks.<br>It has a useful ability, but has low stats, so it's a little difficult to use.</td>
+            </tr>
+            <tr>
+              <td>Monarch Tusker</td>
+              <td>10</td>
+              <td>86</td>
+              <td>62</td>
+              <td>26</td>
+              <td class="recommended_monster_notes">Can slow monsters from a distance by swinging a Slow Staff.<br>Great ability, but gets defeated easily due to its low stats.</td>
+            </tr>
+            <tr>
+              <td>Emperor Tusker</td>
+              <td>5</td>
+              <td>140</td>
+              <td>113</td>
+              <td class="stat_highlight_1">70</td>
+              <td class="recommended_monster_notes">Swings a Quarter Staff, reducing a target's HP to 1/4 of its current amount.</td>
+            </tr>
+            <tr>
+              <td>Gigahead</td>
+              <td>5</td>
+              <td class="stat_highlight_1">150</td>
+              <td class="stat_highlight_1">135</td>
+              <td class="stat_highlight_2">71</td>
+              <td class="recommended_monster_notes">Can attack targets up to 3 tiles away in a straight line.<br>Be careful not to get between the ally Gigahead and its target.</td>
+            </tr>
+            <tr>
+              <td>Escargon</td>
+              <td>50</td>
+              <td class="stat_highlight_2">169</td>
+              <td>75</td>
+              <td>40</td>
+              <td class="recommended_monster_notes">Have it lead the way in hallways as a magic reflecting shield.<br>Useful on floors where King Tusker, Gazer, and Sheep Priest family monsters appear.</td>
+            </tr>
+            <tr>
+              <td class="recommended_monster">Mixergon</td>
+              <td>5</td>
+              <td>146</td>
+              <td>73</td>
+              <td>52</td>
+              <td class="recommended_monster_notes"></td>
+            </tr>
+            <tr>
+              <td>Snacky</td>
+              <td>50</td>
+              <td>56</td>
+              <td>51</td>
+              <td>1</td>
+              <td class="recommended_monster_notes"></td>
+            </tr>
+            <tr>
+              <td>Pako Hammer</td>
+              <td>10</td>
+              <td>105</td>
+              <td>85</td>
+              <td>40</td>
+              <td class="recommended_monster_notes"></td>
+            </tr>
+            <tr>
+              <td>Gazelle Pope</td>
+              <td>10</td>
+              <td>117</td>
+              <td>85</td>
+              <td>55</td>
+              <td class="recommended_monster_notes"></td>
+            </tr>
+            <tr>
+              <td class="recommended_monster">Water Shinryu</td>
+              <td>50</td>
+              <td class="stat_highlight_1">150</td>
+              <td class="stat_highlight_2">150</td>
+              <td>60</td>
+              <td class="recommended_monster_notes"></td>
+            </tr>
+            <tr>
+              <td>Demon Scorpion</td>
+              <td>5</td>
+              <td>80</td>
+              <td>57</td>
+              <td>24</td>
+              <td class="recommended_monster_notes"></td>
+            </tr>
+            <tr>
+              <td>Stun Scorpion</td>
+              <td>5</td>
+              <td>140</td>
+              <td class="stat_highlight_1">138</td>
+              <td class="stat_highlight_2">73</td>
+              <td class="recommended_monster_notes"></td>
+            </tr>
+            <tr>
+              <td>Boulder Beast</td>
+              <td>5</td>
+              <td>130</td>
+              <td>117</td>
+              <td class="stat_highlight_2">71</td>
+              <td class="recommended_monster_notes"></td>
+            </tr>
+            <tr>
+              <td>Queen Spider</td>
+              <td>120</td>
+              <td class="stat_highlight_2">770</td>
+              <td class="stat_highlight_2">390</td>
+              <td>30</td>
+              <td class="recommended_monster_notes"></td>
+            </tr>
+          </table>
           <h3 id="shield">Other Items</h3>
           <p></p>
           <h2 id="floor_guide">Floor Guide</h2>
