--- a/html/dungeon/onigashima.html
+++ b/html/dungeon/onigashima.html
@@ -2302,7 +2302,7 @@
           <ul>
             <li><p>Warp Grass</p></li>
             <ul>
-              <li>You'll usually end up near Galaha.</li>
+              <li>Eating it will usually warp you close to Galaha.</li>
               <li>However, you might get hit by stones or other attacks right away depending on where you land.</li>
             </ul>
             <li><p>Pierce Bracelet</p></li>
