--- a/html/dungeon/shuten_trail_hard.html
+++ b/html/dungeon/shuten_trail_hard.html
@@ -73,7 +73,7 @@
                 </ul>
                 <li><a href="#monsters">Monsters</a></li>
                 <ul>
-                  <li><a href="#monsters">Golden Interval</a></li>
+                  <li><a href="#monsters_golden">Golden Interval</a></li>
                 </ul>
                 <li><a href="#items">Items</a></li>
                 <li><a href="#golden_interval">Golden Interval</a></li>
@@ -573,7 +573,7 @@
               Divide the number by the total for that row to get the %.<br>
               Example: Mamel (12), Chintala (8) → 12 ÷ 20 = 0.6, so Mamel spawns 60% of the time.
             </p>
-            <h3>Golden Interval</h3>
+            <h3 id="monsters_golden">Golden Interval</h3>
             <div class="dungeon_monster_table_gold">
               <table>
                 <tr>
@@ -1459,7 +1459,7 @@
               </li>
             </ul>
           </div>
-          <h2 id="floor_guide">Golden Interval</h2>
+          <h2 id="golden_interval">Golden Interval</h2>
           <p>
             There's a 30% chance for Golden Stairs to be hidden inside of a wall between 3~6F.<br>You'll return to Shuten Trail Hard 7F after claiming the treasure and exiting from the Golden Interval area.
           </p>
