working on Shrine's Hidden Hole guide

--- a/html/dungeon/hidden_hole.html
+++ b/html/dungeon/hidden_hole.html
@@ -7,6 +7,7 @@
         src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
         crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,400,600,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="../../css/index.css">
     <link rel="stylesheet" href="../../css/dungeon.css">
     <script type="text/javascript" src="../../js/dungeon.js"></script>
@@ -336,7 +337,7 @@
               <td>146</td>
               <td>73</td>
               <td>52</td>
-              <td class="recommended_monster_notes"></td>
+              <td class="recommended_monster_notes">Required for synthesizing equipment. The items it swallowed will vanish<br>when it returns to its pot, so you'll need to make Mixergon trip before calling it back.<br>Easiest methods would be to swing a Balance Staff at it, or take control of<br>an Armordillo using a Posession Staff and use their special attack.</td>
             </tr>
             <tr>
               <td>Snacky</td>
@@ -344,7 +345,7 @@
               <td>56</td>
               <td>51</td>
               <td>1</td>
-              <td class="recommended_monster_notes"></td>
+              <td class="recommended_monster_notes">Useful for capturing high level monsters early on. Don't bother maxing its growth.</td>
             </tr>
             <tr>
               <td>Pako Hammer</td>
@@ -352,7 +353,7 @@
               <td>105</td>
               <td>85</td>
               <td>40</td>
-              <td class="recommended_monster_notes"></td>
+              <td class="recommended_monster_notes">Destroys visible traps on the ground. Water Pots and Trap Remove Scrolls<br>cannot be found in this dungeon, so it might get an opportunity to shine.</td>
             </tr>
             <tr>
               <td>Gazelle Pope</td>
@@ -360,7 +361,7 @@
               <td>117</td>
               <td>85</td>
               <td>55</td>
-              <td class="recommended_monster_notes"></td>
+              <td class="recommended_monster_notes">Can halve an enemy monster's level. Useful during the second half of the dungeon.</td>
             </tr>
             <tr>
               <td class="recommended_monster">Water Shinryu</td>
@@ -368,7 +369,7 @@
               <td class="stat_highlight_1">150</td>
               <td class="stat_highlight_2">150</td>
               <td>60</td>
-              <td class="recommended_monster_notes"></td>
+              <td class="recommended_monster_notes">It can't move on land, so it can be used as a cannon that shoots freezing breath.<br>Its breath attack deals 25 damage and makes the target unable to act for 1 turn.<br>Can also be used as a wall, and has the second highest attack among all monsters.</td>
             </tr>
             <tr>
               <td>Demon Scorpion</td>
@@ -376,7 +377,7 @@
               <td>80</td>
               <td>57</td>
               <td>24</td>
-              <td class="recommended_monster_notes"></td>
+              <td class="recommended_monster_notes">Has the ability to slow down a target by 1 stage.<br>Low stats, so you don't want to let it wander around outside of its pot.</td>
             </tr>
             <tr>
               <td>Stun Scorpion</td>
@@ -384,7 +385,7 @@
               <td>140</td>
               <td class="stat_highlight_1">138</td>
               <td class="stat_highlight_2">73</td>
-              <td class="recommended_monster_notes"></td>
+              <td class="recommended_monster_notes">Can paralyze a target, making them unable to act for 1 turn. Has a similar function<br>to Water Shinryu, with the main difference being Stun Scorpion can move on land<br>but doesn't have the range of Water Shinryu's breath attack.</td>
             </tr>
             <tr>
               <td>Boulder Beast</td>
@@ -392,7 +393,7 @@
               <td>130</td>
               <td>117</td>
               <td class="stat_highlight_2">71</td>
-              <td class="recommended_monster_notes"></td>
+              <td class="recommended_monster_notes">Special attack knocks a target away and paralyzes them.<br>Great ability to have on hand if you decide that you need some space.</td>
             </tr>
             <tr>
               <td>Queen Spider</td>
@@ -400,9 +401,10 @@
               <td class="stat_highlight_2">770</td>
               <td class="stat_highlight_2">390</td>
               <td>30</td>
-              <td class="recommended_monster_notes"></td>
+              <td class="recommended_monster_notes">Strongest ally monster in the game, thanks to its high growth limit. Its ability to spawn<br>3 ally Armor Spiders isn't great, but makes up for it with its ridiculously high stats.</td>
             </tr>
           </table>
+          <p>Text</p>
           <h3 id="shield">Other Items</h3>
           <p></p>
           <h2 id="floor_guide">Floor Guide</h2>
