working on the sealed room guide

--- a/html/dungeon/sealed_room.html
+++ b/html/dungeon/sealed_room.html
@@ -20,12 +20,11 @@
           <h2 class="dungeon_heading">Sealed Room</h2>
           <div class="dungeon_desc">
             <div class="dungeon_desc_text">
-              <p>
-                Dungeon you can enter after clearing Onigashima.
-              </p>
-              <p>
-                Text
-              </p>
+              <p>Dungeon you can enter after clearing Onigashima and visiting Shuten Summit.<br>Strong monsters appear from 1F, but you can bring allies and up to 11 items into the dungeon.<br>Be careful not to let your guard down even with an assortment of powerful items on hand.</p>
+              <p>The main objective of this dungeon is to rescue Shuten children who got lost.<br>You'll be rewarded with an Ad Balloon castle decoration and a<br> Shopkeeper icon for your save file after rescuing all 5 children.</p>
+              <p>The children can be found on 20F, 30F, 40F, 50F, and 60F.<br>However, the dungeon actually continues infinitely even after 99F, as it begins a new loop.<br>An Escape Scroll is guaranteed to be on the ground on 99F, including 99F in subsequent loops.</p>
+              <p>You'll need to make multiple trips to the 70~80F Golden Interval if you want to complete the<br>equipment gallery, since both Dodge Shield and Reflect Shiled are treasure chest exclusives.</p>
+              <p>Note that you won't be able to enter Sealed Room until your<br>next visit to the Summit if you process castle parts.</p>
               <ul>
                 <li><a href="#dungeon_overview">Dungeon Overview</a></li>
                 <li><a href="#important_items">Rescuing Children</a></li>
