--- a/html/dungeon/shuten_trail_mid.html
+++ b/html/dungeon/shuten_trail_mid.html
@@ -255,7 +255,7 @@
             Another area that resembles Inexhaustible Falls. The exit is always on the upper side of the map.
           </p>
           <p>
-            <a href="/shiren2/html/system/monster.html#kengo_family">Kengo</a> is a monster that can <b>fling your equipped shield away</b>, making it fly behind you.<br>
+            <a href="/shiren2/html/system/monster.html#kengo_family">Kengo</a> is a monster that can <strong>fling your equipped shield away</strong>, making it fly behind you.<br>
             Either fight with your back against a wall, or unequip your shield beforehand to avoid losing it.<br>
             Shoot arrows to weaken/defeat it from a distance, if possible.
           </p>
