working on the sealed room guide

--- a/html/dungeon/sealed_room.html
+++ b/html/dungeon/sealed_room.html
@@ -21,7 +21,7 @@
           <div class="dungeon_desc">
             <div class="dungeon_desc_text">
               <p>Dungeon you can enter after clearing Onigashima and visiting Shuten Summit.<br>Strong monsters appear from 1F, but you can bring allies and up to 11 items into the dungeon.<br>Be careful not to let your guard down even with an assortment of powerful items on hand.</p>
-              <p>The main objective of this dungeon is to rescue Shuten children who got lost.<br>You'll be rewarded with an Ad Balloon castle decoration and a<br> Shopkeeper icon for your save file after rescuing all 5 children.</p>
+              <p>The main objective is to rescue Shuten children who got lost inside the dungeon.<br>You'll be rewarded with an Ad Balloon castle decoration and a<br> Shopkeeper icon for your save file after rescuing all 5 children.</p>
               <p>The children can be found on 20F, 30F, 40F, 50F, and 60F.<br>However, the dungeon actually continues infinitely even after 99F, as it begins a new loop.<br>An Escape Scroll is guaranteed to be on the ground on 99F, including 99F in subsequent loops.</p>
               <p>You'll need to make multiple trips to the 70~80F Golden Interval if you want to complete the<br>equipment gallery, since both Dodge Shield and Reflect Shiled are treasure chest exclusives.</p>
               <p>Note that you won't be able to enter Sealed Room until your<br>next visit to the Summit if you process castle parts.</p>
@@ -118,7 +118,10 @@
             </div>
           </div>
           <h2 id="dungeon_overview">Dungeon Overview</h2>
-          <p>Text</p>
+          <p>Shiren's stats will be reset when he enters the Sealed Room. (Level 1, strength 8/8, etc.)</p>
+          <p>This dungeon generally has less items per floor than others, and often has Gitan or negative<br>effect items like Unlucky Seed that can be thrown by Water Striders or Kappa family monsters.<br>Throw grasses at enemies or insert them into Identify Pots to identify them, rather than eating them.</p>
+          <p>Shops and Traders don't appear in this dungeon, but on rare occasions<br>you'll come across a Special Monster House called a Hawker House.<br>Hawkers are level 2 versions of Traders, and sometime have Angel Seeds for sale,<br>so it's recommended to bring some Gitan with you in case you run into one.</p>
+          <p>Note that Special Monster Houses no long appear after 88F.</p>
           <h2 id="dungeon_overview">Rescuing Children</h2>
           <p>Text</p>
           <h2 id="dungeon_overview">Preparations Before Entering</h2>
