working on the sealed room guide

--- a/html/dungeon/sealed_room.html
+++ b/html/dungeon/sealed_room.html
@@ -28,8 +28,8 @@
               <ul>
                 <li><a href="#dungeon_overview">Dungeon Overview</a></li>
                 <li><a href="#important_items">Rescuing Children</a></li>
-                <li><a href="#important_items">Preparations Before Entering</a></li>
                 <li><a href="#important_items">Obtaining Rare Items w/Presto Pot</a></li>
+                <li><a href="#important_items">Preparations Before Entering</a></li>
                 <li><a href="#floor_guide">Floor Guide</a></li>
                 <ul>
                   <li><a href="#waterfall_basin">01~19F</a></li>
@@ -123,11 +123,73 @@
           <p>Shops and Traders don't appear in this dungeon, but on rare occasions<br>you'll come across a Special Monster House called a Hawker House.<br>Hawkers are level 2 versions of Traders, and sometime have Angel Seeds for sale,<br>so it's recommended to bring some Gitan with you in case you run into one.</p>
           <p>Note that Special Monster Houses no long appear after 88F.</p>
           <h2 id="dungeon_overview">Rescuing Children</h2>
-          <p>Text</p>
-          <h2 id="dungeon_overview">Preparations Before Entering</h2>
-          <p>Text</p>
+          <ul>
+            <li>The first child, Jiro, can be found on 20F.</li>
+            <li>The second child, Taro, can be found on 30F.</li>
+            <li>The third child can be found on 40F.</li>
+            <li>The fourth child can be found on 50F.</li>
+            <li>The fifth child, Dan, can be found on 60~99F.</li>
+          </ul>
+          <p>Talking to a child will trigger an escape from the dungeon.<br>Rescuing the fifth child requires one inventory slot to be free so that you can receive a reward.<br>The score bonus from rescuing a child is pretty significant, so you might<br>want to leave one child in a non-rescued state if aiming for a high score.</p>
+          <p>The order of children doesn't change even if you rescue a later floor child first.<br>For example, if you rescue the first child on 60F, it will count as the 20F child,<br>and you'll have to go to 60F again later to rescue the fifth child.</p><p>If a child is defeated, or you proceed to the next floor without talking to them, the child will<br>appear again on the next floor where children can appear. (20F, 30F, 40F, 50F, 60~99F)</p>
+          <p>The reward for rescuing all 5 children is an Ad Balloon castle decoration, and a Shopkeeper icon for your save file.<br><strong>You can only obtain one Ad Balloon per save file</strong>, so don't throw it away if you want to 100% the game.</p>
           <h2 id="dungeon_overview">Obtaining Rare Items w/Presto Pot</h2>
-          <p>Text</p>
+          <p>The Presto Pot item table for Sealed Room includes many rare weapons and shields, and the table doesn't<br>appear to change based on the floor number, so bringing many Presto Pots inside and using them on 1F<br>can be a good way to obtain rare items to help with preparations before going for a deeper run.</p>
+          <p>Stock up on Presto Pots by using an ally Armordillo Pop in Onigashima or Shuten Trail Mid.<br>Then prepare a stack of 99 arrows to use as insert items.<br>Suction Scrolls will let you reuse Presto Pots, so bring those if you have some too.<br>Then simply enter Sealed Room and insert 1 arrow at a time into the Presto Pots.<br>Be careful not to insert your main weapon by accident by going through the menus too quickly.</p>
+          <p>The monsters on 1F can be challenging, so you might want to bring a strong shield,<br>a scroll for emergencies, and a strong ally monster to take care of enemies.<br>You can bring Mamo along to carry more items into the dungeon if desired.</p>
+          <p>You can also cheat by copying your save file to a controller pak before using the Presto Pots,<br>and then copy the save file from the controller pak if you didn't get what you want.<br>However, note that your save file will permanently show a . instead of : after the file number in the main menu,<br>making it clear that you copied the data from a controller pak. It doesn't affect anything gameplay wise,<br>but it's something to keep in mind if you're aiming for a true 100% completion of the game.</p>
+          <h2 id="dungeon_overview">Preparations Before Entering</h2>
+          <p>A strong weapon and shield is pretty much mandatory for this dungeon.<br>You'll want a minimum of +50 upgrade value, and it's best to go all the way up to +99 beforehand.<br>If you want to be extra safe, collect Blank Scrolls in Onigashima and use them in synthesis to increase the number<br>of slots on equipment, allowing you to use more seals to cover a greater number of weaknesses or situations.</p>
+          <p>The quickest way to increase upgrade value would likely be to use an ally Iai monster<br>to collect equipment, and then synthesize the items using an ally Mixer monster.<br>Be sure to make Mixer trip to drop the item using an Armordillo before returning it to its pot.</p>
+          <p>
+            <strong>Weapon</strong><br>
+            Kaburasutegi: 99 ATK, 12 slots. Makes the dungeon a cakewalk with its absurd base attack.<br>
+            Ryujin Sword: 25 ATK, 7 slots + inherent 龍 seal. Made by combining 4 Dragon Killers.<br>
+            Dragon Killer: 15 ATK, 7 slots + inherent 竜 seal. Onigashima Golden Interval.<br>
+            Crescent Arm: 14 ATK, 6 slots + inherent 月 seal. Defeat Boss Oni again in Onigashima after finishing the story.<br>
+            Ivory Sword: 13 ATK, 4 slots + rustproof. Onigashima Golden Interval.
+          </p>
+          <p>Manji-Kabura can be obtained from a Presto Pot inside Sealed Room, so you<br>could work on making a Kaburasutegi before attempting a deep run of Sealed Room.<br>The others can be obtained from Golden Intervals inside Onigashima, excluding Crescent Arm<br>which is simply a guaranteed reward for defeating Boss Oni again after finishing the main story.</p>
+          <p>
+            <strong>Weapon Seals</strong><br>
+            三 and 回 are required.<br>
+            火 lets you defeat enemies from a distance, but the animation is long, so you might prefer it on a secondary weapon.<br>
+            幸 or 天 helps Shiren level up faster. Best to stack multiple seals on a secondary weapon to use early game.<br>
+            仏, ド, and 竜 will increase your damage output (x1.5) against certain enemies.<br>
+            眠 sometimes puts enemies to sleep (8%), allowing you to defeat them without getting hit.<br>
+            飯 or に will help prevent starving to death by making enemies drop riceballs when defeated.<br>
+            サ lets you dig through walls without the weapon breaking, allowing you to create shortcuts.<br>
+            金 (red) prevents rust, and protects against 1 use of Monsoon Doll's seal removing special attack.
+          </p>
+          <p>
+            <strong>Shield</strong><br>
+            Walrus Shield: 6 DEF, 6 slots + inherent ト seal. Protects against Gyandora. Obtained from Onigashima Traders.<br>
+            Leather Shield: 4 DEF, 5 slots + inherent 皮 seal and rustproof. Low defense isn't an issue with high upgrade value.<br>
+            Ivory Shield: 12 DEF, 5 slots + rustproof. Onigashima Golden Interval.
+          </p>
+          <p>
+            <strong>Shield Seals</strong><br>
+            山 reflects magic like Gazer hypnosis, Sheep Priest spells, and King Tusker staves.<br>
+            見 increases evasion (35%), making monster regular attacks miss more often.<br>
+            皮 halves hunger rate.<br>
+            爆 reduces damage (30%) from explosions such as cannonballs, landmines, and Patient Bags.<br>
+            ト blocks stealing attacks by Zalokleft, Gamarra, and Gyadon family monsters.<br>
+            弟 restores HP when Shiren receives damage. Stack multiple seals to increase its effectiveness.<br>
+            竜 reduces fire damage by 30%. Combine with 火 to reduce fire damage by 50%.<br>
+            火 reduces fire damage by 20%. Combine with 竜 to reduce fire damage by 50%.<br>
+            金 (red) prevents rust, and protects against 1 use of Monsoon Doll's seal removing special attack.<br>
+            眠 somtimes puts enemies to sleep (8%) for 5 turns when they hit you with a regular attack.
+          </p>
+          <p>
+            <strong>Other Items</strong><br>
+            Revival Grass, Sanctuary Scroll, staves, Scout and Phantasm bracelets, Plating Scroll to repair bracelets, etc.<br>
+            Disposable Sword with a か seal to use as a long-lasting food source.<br>
+            Storage Pots expanded to the max size of 8.<br>
+            Escape or Blank scroll so that you can return to the village in case of an emergency.
+          </p>
+          <p>Strength and Boost grasses if you want to defeat monsters in a single hit.<br>Note that Shihan, Gigahead, and Taurus family monsters cannot be defeated<br>in one hit even with a Kaburasutegi+99 without increasing your strength.</p>
+          <p>Trapper Bracelet can be used to collect Pitfalls to use in emergencies, or to descend faster.<br>However, keep in mind that Trapper Bracelets crack more easily than other bracelets,<br>and Shiren's attack is significantly reduced while it's equipped.</p>
+          <p></p>
           <h2 id="floor_guide">Floor Guide</h2>
           <h3 id="waterfall_basin">01~19F</h3>
           <p></p>
